--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ google-generativeai==0.3.2
 langchain==0.1.4
 langchain-google-genai==0.0.6
 langgraph==0.0.20
+langchain-core==0.1.16
 
 # Vector DB & Cache
 qdrant-client==1.7.3
